test/parsetest/invalid/emty_array_access.java
class Invalid2 {

	public static void main(String[] args) {
		int x = [];
	}


}
